--- a/recordify.html
+++ b/recordify.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-<title>Recordify</title>
+<title>InstaFoodie | Recordify</title>
 <script src="Media Devices API.js"></script>
 <script src="PiP API.js"></script>
 <link rel = "stylesheet" href = "Style Sheet.css">
